Add home tab configurations
